# ChangeLog for dev-vcs/gitserve
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2012; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r3.ebuild:
  src_install default hack now in jnrowe-pypi eclass.

  09 Apr 2012; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r3.ebuild:
  Switched to python-distutils-ng eclass.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r3.ebuild:
  Switched to EAPI4.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  17 Oct 2011; James Rowe <jnrowe@gmail.com>
  files/gitserve-0.2.0-callable_from_git_ui.patch:
  Added patch description.

  04 Sep 2011; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r3.ebuild:
  SRC_URI fixed for move to jnrowe-misc.

  04 Apr 2011; James Rowe <jnrowe@gmail.com> -gitserve-0.2.0-r2.ebuild,
  gitserve-0.2.0-r3.ebuild:
  Keyworded amd64.

  04 Apr 2011; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r3.ebuild:
  Keyworded x86.

*gitserve-0.2.0-r3 (03 Mar 2011)

  03 Mar 2011; James Rowe <jnrowe@gmail.com> +gitserve-0.2.0-r3.ebuild,
  +files/gitserve-0.2.0-callable_from_git_ui.patch:
  Use setuptools entry points for wrapper, fixed to use git-serve so it
  callable from git as 'git serve'.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r2.ebuild,
  metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  26 Oct 2010; James Rowe <jnrowe@gmail.com> -gitserve-0.2.0-r1.ebuild,
  gitserve-0.2.0-r2.ebuild:
  Keyworded amd64.

  22 Oct 2010; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r2.ebuild:
  Keyworded x86.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  22 Sep 2010; James Rowe <jnrowe@gmail.com> gitserve-0.2.0-r1.ebuild,
  gitserve-0.2.0-r2.ebuild:
  Use mirror://pypi for tarballs.

*gitserve-0.2.0-r2 (22 Sep 2010)
