@@ -5,7 +5,7 @@
 EAPI=4
 PYTHON_COMPAT="python2_5 python2_6 python2_7"
 
-inherit base eutils jnrowe-pypi
+inherit eutils jnrowe-pypi
 
 DESCRIPTION="A helper tool for git that mimics mercurial's serve command"
 HOMEPAGE="https://github.com/jezdez/git-serve/"
@@ -24,12 +24,6 @@ RDEPEND="dev-vcs/git"
 PATCHES=("${FILESDIR}"/${P}-callable_from_git_ui.patch "${WORKDIR}"/${P}-gitweb_1.6.4.4_update.patch)
 
 DOCS=(README.txt)
-
-src_prepare() {
-	base_src_prepare
-
-	python-distutils-ng_src_prepare
-}
 
 python_install_all() {
 	python-distutils-ng_redoscript "/usr/bin/git-serve"
