@@ -10,5 +10,5 @@ RDEPEND=dev-vcs/git python_targets_python2_5? ( dev-lang/python:2.5 ) python_tar
 REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
 SRC_URI=mirror://pypi/g/gitserve/gitserve-0.2.0.tar.gz https://github.com/downloads/JNRowe/jnrowe-misc/gitserve-0.2.0-gitweb_1.6.4.4_update.patch.bz2
-_eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	6891f6f484e3b44a0a15e1b0c0fc9a14	jnrowe-pypi	2a731c2f3dfb2808624d1093883f62e1	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9c728fa97679b3ca2742cf8ccd260599	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=1401535d2a6c9366cb93d1c2d320fed3
+_eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	6891f6f484e3b44a0a15e1b0c0fc9a14	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9c728fa97679b3ca2742cf8ccd260599	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
+_md5_=5ea40276b1dca848f93e50b44fe3bdcf
